--- a/aula06/ex003.html
+++ b/aula06/ex003.html
@@ -20,7 +20,7 @@
        var soma = n1 + n2;
 
 
-       window.alert('A soma dos valores é ' + soma);
+       window.alert(`A soma entre ${n1} e ${n2} é igual a ${soma} `);
     </script>
 </body>
 </html>
